<resources>
    <string name="app_name">ElevateRetailApp</string>
    <string name="Home_Fragment">HOME</string>
    <string name="Settings_Fragment">APP SETTINGS</string>
    <string name="Profile_Fragment">PROFILE</string>
    <string name="Cart_Fragment">Cart Fragment</string>
    <string name="Checkout_Fragment">CHECKOUT</string>
    <string name="aboutBtn_text">About</string>
    <string name="close_settingsBtn_contentDesc">Close Settings</string>
    <string name="notificationBtn_text">Notifications</string>
    <string name="darkMode_swcText">Dark Mode</string>
    <string name="legalBtn_text">Legal</string>
    <string name="payMethodBtn_text">Payment Method</string>
    <string name="Hello_User">Hi, User!</string>
    <string name="Image_Description">Description</string>
    <string name="Item_Price">Price</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="featured_items">Featured Items</string>

    <!-- Add missing strings -->
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="settings_user">User</string>
    <string name="settingsShipAddressBtn_Text">Shipping Address</string>
    <string name="settingsChangePWBtn_Text">Change Password</string>
    <string name="settingsDarkMode_Text">Dark Mode</string>
    <string name="settingsCustomerServ_Text">Customer Service</string>
    <string name="settingsContactUs_Btn">Contact Us</string>
    <string name="settingsLeaveReview_Btn">Leave a Review</string>
    <string name="settings_other">Other Settings</string>
    <string name="notificationBtn_on_text">Notifications On</string>
    <string name="notificationBtn_off_text">Notifications Off</string>
    <string name="settingsNotification_Text">Notifications</string>
</resources>
