<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".SettingsFragment">

    <!--Settings fragment with buttons-->
    <!--Would lead to other fragments-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/settingsTitleBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/closeSettingBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="#a6a6a6"
                android:contentDescription="@string/close_settingsBtn_contentDesc"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/Settings_Fragment" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/settings_user"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="30dp"
        android:paddingEnd="5dp"
        android:background="@drawable/blank_view_frame">

        <Button
            android:id="@+id/payMethodButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payMethodBtn_text"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"/>

        <Button
            android:id="@+id/shipAddButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsShipAddressBtn_Text"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"/>

        <Button
            android:id="@+id/chngPWButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsChangePWBtn_Text"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settingsDarkMode_Text"
                android:paddingStart="25dp"
                android:textStyle="bold"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>





        </LinearLayout>

        <Button
            android:id="@+id/notificationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notificationBtn_text"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"/>


    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/settingsCustomerServ_Text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="30dp"
        android:paddingEnd="5dp"
        android:background="@drawable/blank_view_frame">

        <Button
            android:id="@+id/contactUsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsContactUs_Btn"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"/>

        <Button
            android:id="@+id/leaveReviewButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsLeaveReview_Btn"
            android:textAlignment="textStart"
            android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"/>

    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/settings_other"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="5dp"
                android:background="@drawable/blank_view_frame">

                <Button
                    android:id="@+id/aboutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutBtn_text"
                    android:textAlignment="textStart"
                    android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"/>

                <Button
                    android:id="@+id/legalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/legalBtn_text"
                    android:textAlignment="textStart"
                    android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"/>



            </LinearLayout>

    </LinearLayout>

</ScrollView>