<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".HomeFragment">

    <!--Home fragment-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Holds Imageview for user and greets-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="80dp"
                android:layout_height="78dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="30dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/Image_Description"
                android:cropToPadding="true"
                android:src="@drawable/person"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/helloUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Hello_User"
                android:textSize="34sp" />


        </LinearLayout>

        <!--Presents each Recyclerview with a text-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_arrivals"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helloUser" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/new_arrivals_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/blank_view_frame"
            android:padding="6dp"
            android:orientation="horizontal">

        </androidx.recyclerview.widget.RecyclerView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/featured_items"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/featured_items_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/blank_view_frame"
            android:padding="6dp"
            android:layout_gravity="center"
            android:orientation="vertical">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</ScrollView>